src/snapshots/droid_tui__regression__visual_diff_graph_highlight_snapshot@diff_classic_160.snap
---
source: src/regression.rs
expression: ansi_on
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                                                  DROID: cable_banner_combos                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Panels ──────────────────────────────────────────────────────────────────────────────────────┐┌ Graph ───────────────────────────────────────────────────────┐
│┌─┐┌────┐┐                                                                                    ││                                                              │
││ …  CV …                                                                                     ││                                                              │
││ ││    ││                                                                                    ││                                                              │
││ ││    ││                                                                                    ┌Mixer──────────────────────────────────────────┐               │
││ ││    ││                                                                                    ││                                              │               │
││ ││    ││                                                                                    ││                ╭mixer*──────────────╮        │               │
││ ││    ││                                                                                    ││                │                    │        │               │
││ ││    ││                                                                                    ││                ◉────┐        ┌──────●        │               │
││ ││    ││                                                                                    ││╭clocktool──────│────╮        │      │        │               │
││ ││    ││                                                                                    │││               ╰────────────────────╯        │               │
││ ││    ││                                                                                    │┌│unnamed)─────────└──●────────│───────────────│───────────────┐
││ ││    ││                                                                                    │││                    │        │               │               │
││ ││    ││                                                                                    ││╰────────────────────╯─────╮  │               │               │
││ ││    ││                                                                                    ││      │              │ ╭contour─────────────╮ │               │
││ ││  ▶ ││                                                                                    ││      ◉───────┐      ┌─│───●  │         ╭O1──────────────────╮│
││ ││  … ││                                                                                    ││      │       │      │ ◉───│──┘         │ ┌─● │              ││
││ ││    ││                                                                                    ││      ╰────────────────│───╯            ◉─┘ │ │              ││
││ ││    ││                                                                                    ││              │      │ ╰────────────────│───╯ │              ││
││ ││    ││                                                                                    ││              │      │                  ╰────────────────────╯│
││ ││    ││                                                                                    └───────────────│──────│────────────────────────┘               │
││ ││    ││                                                                                    ││              │ ╭L1.1────────────────╮                        │
││ ││    ││                                                                                    ││ ╭B1.1──────────│─────╮              │                        │
││ ││    ││                                                                                    ││ │            │ ◉────┘│              │                        │
││ ││    ││                                                                                    ││ │            └─│─────●              │                        │
││ ││    ││                                                                                    ││ │              ╰────────────────────╯                        │
││ ││    ││                                                                                    ││ ╰────────────────────╯                                       │
││ ││    ││                                                                                    ││                                                              │
││ ││    ││                                                                                    │└──────────────────────────────────────────────────────────────┘
││ ││    ││                                                                                    ││                                                              │
││ ││    ││                                                                                    ││                                                              │
││ ││    ││                                                                                    ││                                                              │
│└─┘└────┘┘                                                                                    ││                                                              │
└──────────────────────────────────────────────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Loaded cable_banner_combos | latency avg 0.0 / max 0.0 (1 loop ≈ 190µs) | 0 back edge(s) | Scale: 1.0 | Orientation: Portrait                                 │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
