src/snapshots/droid_tui__regression__visual_diff_graph_highlight_snapshot@diff_classic_40.snap
---
source: src/regression.rs
expression: ansi_on
---
┌──────────────────────────────────────┐
│      ┌(unnamed)───────────────┐      │
└──────│────────────────────────│──────┘
       │ ╭button──────────────╮ │
       │ │                    │ │
       │ │         ┌──────────● │
       │ │         │    │     │ │
       │ ╰────────────────────╯ │
       │           │    │       │
       └───────────│────│───────┘
                   │    │
                   │    │
                   │    │
                   │    │
                   │    │
                   │    │
                   │    │
                   │    │
┌Mixer─────────────│────│──────────────┐
│                  │    │              │
│                 ╭contour─────────────╮
│                 ││    │              │
│                 ◉─────┐              │
│                 ││    │              │
│                 ╰────────────────────╯
│                  │    │              │
│                  │    │              │
│                  │    │              │
│                  │    │              │
│                  │    │              │
│        ╭mixer*──────────────╮        │
│        │         │    │     │        │
╭clocktoo◉───────────╮  └─────●        │
│        │     │     │        │        │
│        ╰────────────────────╯        │
│                    │                 │
╰────────────────────╯                 │
┌──────────────────────────────────────┐
│No patch loaded. Press 'l' to load. | │
└──────────────────────────────────────┘
