src/snapshots/droid_tui__regression__visual_diff_graph_highlight_snapshot@diff_error_classic_100.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│          ┌Sources────────────────────────────────────────────────────┐                           │
└──────────│───────────────────────────────────────────────────────────│───────────────────────────┘
           │                                    ╭divider─────────────╮ │
           │                                    │                    │ │
           │                                    │                    ●───┐
           │                                    │                    │ │ │
           │                                    ╰────────────────────╯ │ │
           │                                                           │ │
           │                                                           │ │
           │                                                           │ │
           │                                                           │ │
           │                                                           │ │
           │                                                           │ │
           │                                                           │ │
┌Sinks───────────────────────────────────────────────────────────────────│─────────────────────────┐
│          │ ╭clocktool───────────╮                                    │ │                         │
│          │ │                    │                                    │ │    ╭copy────────────────╮
│          │ │                    ●─────────────────────┐              │ │    │                    │
│          │ │                    │                     └────────────────└────◉                    │
│          │ ╰────────────────────╯                                    │      │                    │
│          │                                                           │      ╰────────────────────╯
│          └───────────────────────────────────────────────────────────┘                           │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
╭p2b8────────────────╮                                                                             │
│                    │                                                                             │
│                    │                                                                             │
│                    │                                                                             │
╰────────────────────╯                                                                             │
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│No patch loaded. Press 'l' to load. | latency avg 0.5 / max 1.0 (1 loop ≈ 190µs) | 0 back edge(s) │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
