src/snapshots/droid_tui__regression__visual_diff_graph_highlight_snapshot@diff_error_classic_160.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                                                  DROID: graph_topology_error                                                                 │
└────────────────────────────────────────────────────────────────────────────────────────────────────────────┌Sources──────────────────┐───────────────────────┘
┌ Panels ──────────────────────────────────────────────────────────────────────────────────────┐┌ Graph ─────│─────────────────────────│───────────────────────┐
│◉◉┐                                                                                           ││            │ ╭clocktool───────────╮  │                       │
│…0%                                                                                           ││            │ │                    │  │                       │
││ │                                                                                           ││            │ │               ┌────●  │                       │
││ │                                                                                           ││            │ │               │    │  │                       │
││ │                                                                                           ││            │ ╰────────────────────╯────────────┐             │
││ │                                                                                           ││            │  │              │       │         │             │
││ │                                                                                           ││            │  │         ╭copy────────────────╮ │             │
││ │                                                                                           ││            │  │         │    │       │       │ │             │
││ │                                                                                           ││            │  │         ◉────┐       │       │ │             │
││ │                                                                                           ││            │  │         │    │       │       │ │             │
│○○│                                                                                           ││            │  │         ╰────────────────────╯ │             │
│……│                                                                                           ││            │  │              │       │         │             │
││ │                                                                                           ││            │  ╭divider─────────────╮ │         │             │
││ │                                                                                           ││            │  │              │     │ │         │             │
│○○│                                                                                           ││            │  │              └─────● │         │             │
│○○│                                                                                           ││            │  │                    │ │         │             │
││ │                                                                                           ││            │  ╰────────────────────╯ │         │             │
││ │                                                                                           ││            │  │                      │         │             │
││ │                                                                                           ││            │  │                      │         │             │
│○○│                                                                                           ││            │  │ ╭p2b8────────────────╮         │             │
│……│                                                                                           ││            │  │ │                    │         │             │
││ │                                                                                           ││            │  │ │                    │         │             │
││ │                                                                                           ││            │  │ │                    │         │             │
│○○│                                                                                           ││            │  │ ╰────────────────────╯         │             │
│○○│                                                                                           ││            │  │                      │         │             │
││ │                                                                                           ││            │  └────────────────────────────────┘             │
││ │                                                                                           ││            │                         │                       │
││ │                                                                                           ││            │ ╭p2b8────────────────╮  │                       │
││ │                                                                                           ││            │ │                    │  │                       │
││ │                                                                                           ││            │ │                    │  │                       │
││ │                                                                                           ││            │ │                    │  │                       │
│└─┘                                                                                           ││            │ ╰────────────────────╯  │                       │
└──────────────────────────────────────────────────────────────────────────────────────────────┘└────────────│─────────────────────────│───────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Loaded graph_topology_error | Renders degraded at 160 cols — use ≥ 290 cols or reduce scale | latency avg 0.5 / max 1.0 (1 loop ≈ 190µs) | 0 back edge(s) | Sc│
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
