src/snapshots/droid_tui__regression__visual_diff_graph_highlight_snapshot@diff_mono_120.snap
---
source: src/regression.rs
expression: ansi_on
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                              DROID: cable_banner_combos                                              │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ Panels ──────────────────────────────────────────────────────────────┐┌ Graph ───────────────────────────────────────┐
│┌─┐┌────┐┐                                                            ││                                              │
││ …  CV …                                                             ││                                              │
││ ││    ││                                                            ││ ┌Mixer───────────────────────────────────────┐
││ ││    ││                                                            ││ │                                            │
││ ││    ││                                                            ││ │                      ╭contour─────────────╮│
││ ││    ││                                                            ┌(u│named)───────────────┐│                    ││
││ ││    ││                                                            ││ │                    ┌─◉───────┐            ││
││ ││    ││                                                            ││╭button──────────────╮│││       │            ││
││ ││    ││                                                            ││││                   │││╰────────────────────╯│
││ ││    ││                                                            ││││                  ┌●┘│        │             │
││ ││    ││                                                            ││││                  ││ │        │             │
││ ││    ││                                                            ││╰────────────────────╯ │        │             │
││ ││    ││                                                            ││ │                  │  │        │             │
││ ││    ││                                                            └──│──────────────────│──┘        │             │
││ ││  ▶ ││                                                            ││ │                 ╭mixer*──────────────╮     │
││ ││  … ││                                                            ││ │                 ││           │       │     │
││ ││    ││                                                            ││ │                 ◉┘┐          └───────●     │
││ ││    ││                                                            ││ │                 │ │                  │     │
││ ││    ││                                                            ││ │                 ╰────────────────────╯     │
││ ││    ││                                                            ││ │                   │                        │
││ ││    ││                                                            ││ │                   │                        │
││ ││    ││                                                            ││ │                   │                        │
││ ││    ││                                                            ││ │ ╭clocktool───────────╮                     │
││ ││    ││                                                            ││ │ │                 │  │                     │
││ ││    ││                                                            ││ │ │                 └──●                     │
││ ││    ││                                                            ││ │ │                    │                     │
││ ││    ││                                                            ││ │ ╰────────────────────╯                     │
││ ││    ││                                                            ││ │                                            │
││ ││    ││                                                            ││ └────────────────────────────────────────────┘
││ ││    ││                                                            ││                                              │
││ ││    ││                                                            ││                                              │
│└─┘└────┘┘                                                            ││                                              │
└──────────────────────────────────────────────────────────────────────┘└──────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Loaded cable_banner_combos | Renders degraded at 120 cols — use ≥ 36 cols or reduce scale | latency avg 0.0 / max 0.0 │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
